# RangeShiftR-pkg

./: .gitignore  Allele.h  CMakeLists.txt  CONTRIBUTING.md  Cell.cpp  Cell.h  Community.cpp  Community.h  DispersalTrait.cpp  DispersalTrait.h  Distributions.h  FractalGenerator.cpp  FractalGenerator.h  GeneticFitness.cpp  GeneticFitness.h  GeneticFitnessTrait.cpp  GeneticFitnessTrait.h  GeneticLoad.cpp  GeneticLoad.h  Genome.cpp  Genome.h  Individual.cpp  Individual.h  Landscape.cpp  Landscape.h  Main.cpp  Management.cpp  Model.cpp  Model.h  Mutation.h  NeutralStatsManager.cpp  NeutralStatsManager.h  NeutralTrait.cpp  NeutralTrait.h  Parameters.cpp  Parameters.h  Patch.cpp  Patch.h  Population.cpp  Population.h  (+24 more)
.github/ISSUE_TEMPLATE/: feature_request.md  improve-existing-content.md
.github/workflows/: check.yml  r.yml
RScore/: README.md
RangeShiftR/: DESCRIPTION  LICENSE.md  NAMESPACE
RangeShiftR/R/: RSsim.R  RangeShiftR.R  Rfunctions.R  RunRS.R  addition.R  class_ControlParams.R  class_DemogParams.R  class_DispersalParams.R  class_GeneticsParams.R  class_InitialisationParams.R  class_LandParams.R  class_ManagementParams.R  class_RSparams.R  class_SimulationParams.R  output_handling.R  plotProbs.R
RangeShiftR/inst/: REFERENCES.bib
RangeShiftR/man/: ArtificialLandscape.Rd  CRWTraits.Rd  CorrRW.Rd  CorrRWTraits.Rd  Demography.Rd  Dispersal.Rd  DispersalKernel.Rd  Emigration.Rd  EmigrationTraits.Rd  GeneticLoadTraits.Rd  Genetics.Rd  ImportedLandscape.Rd  Initialise.Rd  KernelTraits.Rd  Management.Rd  NeutralTraits.Rd  RSsim.Rd  RangeShiftR-package.Rd  RangeShiftR_citation.Rd  RunRS.Rd  SMS.Rd  SMSTraits.Rd  SMSpathLengths.Rd  Settlement.Rd  SettlementTraits.Rd  Simulation.Rd  StageStructure.Rd  Traits.Rd  Transfer.Rd  Translocation.Rd  createODD.Rd  createParameterTables.Rd  getLocalisedEquilPop.Rd  plotAbundance.Rd  plotOccupancy.Rd  plotProbs.Rd  readPop.Rd
RangeShiftR/src/: BatchMode.h  Cell.cpp  Cell.h  Community.cpp  Community.h  FractalGenerator.cpp  Genome.h  Individual.cpp  Individual.h  Landscape.cpp  Landscape.h  Makevars  Makevars.win  Model.cpp  Model.h  Parameters.cpp  Parameters.h  Patch.cpp  Patch.h  Population.cpp  Population.h  RSrandom.cpp  RSrandom.h  RandomCheck.cpp  RcppExports.cpp  Rinterface.cpp  Rinterface.h  Species.cpp  Species.h  SubCommunity.cpp  SubCommunity.h  Version.cpp  Version.h
RangeShiftR/src/RScore/: .gitignore  Allele.h  CMakeLists.txt  CONTRIBUTING.md  Cell.cpp  Cell.h  Community.cpp  Community.h  DispersalTrait.cpp  DispersalTrait.h  FractalGenerator.cpp  GeneticFitnessTrait.cpp  GeneticFitnessTrait.h  Genome.cpp  Individual.cpp  Individual.h  Landscape.cpp  Landscape.h  Main.cpp  Management.cpp  Management.h  Model.cpp  Model.h  NeutralStatsManager.cpp  NeutralStatsManager.h  NeutralTrait.cpp  NeutralTrait.h  Parameters.cpp  Parameters.h  Patch.cpp  Patch.h  Population.cpp  Population.h  QuantitativeTrait.h  README.md  RSrandom.cpp  RSrandom.h  RandomCheck.h  Species.cpp  Species.h  (+8 more)
RangeShiftR/src/RScore/unit_tests/: testIndividual.cpp  testNeutralStats.cpp  testPopulation.cpp
RangeshiftR/: .Rbuildignore  DESCRIPTION  NAMESPACE
RangeshiftR/R/: RangeshiftR.R  RcppExports.R  Rfunctions.R  class_ControlParams.R  class_DemogParams.R  class_DispersalParams.R  class_GeneticsParams.R  class_InitialisationParams.R  class_LandParams.R  class_RSparams.R  class_SimulationParams.R  output_handling.R
RangeshiftR/man/: ColonisationStats.Rd  CorrRW.Rd  Demography.Rd  ImportedLandscape.Rd  RSsim.Rd  RangeshiftR-package.Rd  SMS.Rd  Simulation.Rd  Transfer.Rd  getLocalisedEquilPop.Rd  readRange.Rd
RangeshiftR/src/: BatchMode.cpp  BatchMode.h  Community.cpp  Community.h  Genome.cpp  Genome.h  Individual.cpp  Individual.h  Landscape.cpp  Landscape.h  Main.cpp  Makevars  Model.cpp  Model.h  Parameters.cpp  Parameters.h  Patch.h  Population.cpp  Population.h  RSrandom.cpp  RSrandom.h  RandomCheck.cpp  RcppExports.cpp  Rinterface.cpp  Rinterface.h  Species.cpp  Species.h  SubCommunity.cpp  Version.cpp  Version.h
doc/: RS_v2.0_distribution.xlsx  Test.txt
src/: Main.cpp  RSbatch_v2_0_64bit.cbproj  RangeShifter_v2_0_64bit.cbproj  RangeShifter_v2_0_64bit.cpp
src/Bacup 181020/: BatchMode.cpp  BatchMode.h  Community.cpp  Community.h  Individual.cpp  Individual.h  Model.cpp  Model.h  Parameters.h  Population.cpp  Population.h  Species.cpp  Species.h  SubCommunity.cpp  SubCommunity.h
src/Batch/: Main.cpp  Makefile.txt  RandomCheck.cpp  RandomCheck.h  Rangeshifter  Version.cpp  Version.h
src/Common/: BatchMode.cpp  BatchMode.h  Cell.cpp  Cell.h  Community.cpp  Community.h  FractalGenerator.cpp  FractalGenerator.h  Genome.cpp  Genome.h  Individual.cpp  Individual.h  Landscape.cpp  Landscape.h  Model.cpp  Model.h  Parameters.cpp  Parameters.h  Patch.cpp  Patch.h  Population.cpp  Population.h  (+11 more)
unit_tests/: testIndividual.cpp  testNeutralStats.cpp  testPopulation.cpp
(+92 files in other folders)
